# word_freq_app

./: Cargo.toml  README.md
src/: main.rs
