[package]
name = "word_frequency_application"
description = "An app that takes a string input of any length and tells you how many times each word was written"
version = "1.1.0"
authors = ["RuvimP05"]
repositories = "https://github.com/RuvimP05/word_freq_app.git"
edition = "2021"

[dependencies]
iced = { version = "0.10.0"}

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0